# convo-kg

./: .gitignore  Atyx_Prototype_Scope.docx  CLAUDE.md  LICENSE  PMS V s Mutual Fund Which one is better for you - The BlueFort BluePrint.txt  README.md  add_noise.py  audio_prep.md  config.yaml  design_note.md  package-lock.json  package.json  pyproject.toml  requirements-asr.txt  requirements-denoise.txt  sample2.txt  setup.sh  start.sh
.github/workflows/: deploy-docs.yml
Ui-design/: Atyx Convo-KG.html  atyx_standalone_src.html
data/ground_truth/: pms_graph_snapshot.json  snr_results.json
data/work/: call_100.facts.json  (+3 more)
docs/: api-specification.md  demo_script.md  demo_video_script.md  deployment-guide.md  entity-relationship.md  index.md  product-overview.md  sequence-diagrams.md  system-architecture.md  user-stories.md  wireflows.md  wireframes.md
frontend/: index.html
scripts/: asr_worker.py  asr_worker_final.py  denoise_worker.py  prep_clips.py  prep_eval_clips.py  process_clip.py  restore_graph.py  snapshot_graph.py
src/: api.py  asr_merge.py  audioprep.py  chunking.py  config.py  contracts.py  diarize_asr.py  enhance.py  evaltools.py  evaluate.py  extract.py  graph.py  llm.py  ontology.py  pipeline.py  qa.py  resolve.py
tests/: test_api.py  test_chunking.py  test_config.py  test_contracts.py  test_diarize_asr.py  test_enhance.py  test_evaltools.py  test_evaluate.py  test_extract.py  test_frontend_audit.py  test_graph.py  test_graph_snapshot.py  test_llm.py  test_ontology.py  test_pipeline.py  test_prep_clips.py  test_qa.py  test_resolve.py
(+15 files in other folders)
