[project]
name = "atyx-convo-kg"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "openai>=1.40",
  "numpy>=1.26",
  "soundfile>=0.12",
  "librosa>=0.10",
  "python-dotenv>=1.0",
  "deepfilternet>=0.5.6",
  "mlx-whisper>=0.4.0",
  "whisperx>=3.1.1",
  "pyannote.audio>=3.1",
  "fastapi>=0.110",
  "uvicorn>=0.29",
]
[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
markers = ["integration: requires LM Studio / models / network"]
addopts = "-m 'not integration'"
